--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,133 +1,171 @@
-:root {
-    --primary-color: #0066cc;
-    --secondary-color: #001f3f;
-    --tertiary-color: #b3e0ff;
-    --dark-color: #000;
-    --light-color: #fff;
-    --danger-color: #ff5e5e;
-    --success-color: #5eff5e;
-    --warning-color: #ffdb5e;
-    --info-color: #5e9eff;
-    --border-radius: 5px;
-    --box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    --transition: 0.3s;
-    --font-family: 'Poppins', sans-serif;
-    --font-size: 16px;
-    --font-weight: 400;
-    --line-height: 1.6;
-    --letter-spacing: 0.5px;
-    --container-width: 1200px;
-    --container-padding: 20px;
-    --container-margin: 0 auto;
-    --container-gap: 20px;
-    --container-min-width: 300px;
-    --container-max-width: 1200px;
+// common css for Dashboard component
+.c-dash-comp1 {
+    padding: 10px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: var(--transition) ease-in-out;
+}
+
+.dashboard-title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: var(--secondary-color);
+}
+
+.countcards, .dashreport {   
+    padding: 20px;
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+    background-color: var(--light-color);
+    transition: var(--transition) ease-in-out;
 }
 
 .dashboard {
-    background-color: var(--tertiary-color);
-}
+    height: calc(100vh - 80px);
 
-.dashname {
-    font-size: 48px;
-    font-weight: 700;
-    padding-left: 10px;
-    margin-top: 10px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--secondary-color);
-}
+    .dashheader {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+        padding-left: 5px;
+        border-bottom: 1px solid var(--fade-dark-color);
+    
+        .dashname {
+            font-size: 32px;
+            font-weight: 600;
+            padding-left: 10px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: var(--secondary-color);
+        }
 
-.dashcontent {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    // margin-top: 10px;
-}
+        .dashsearch {
+            display: flex;
+            align-items: center;
+            padding: 1px 2px;
+            border: 2px solid var(--secondary-color);
+            border-radius: var(--border-radius);
+            background-color: var(--light-color);
+            transition: var(--transition) ease-in-out;
+            
+            input {
+                width: 100%;
+                background-color: var(--light-color);
+                color: var(--dark-color);
 
-.countcards {
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-}
+                &::placeholder {
+                    color: var(--fade-dark-color);
+                }
+            }
 
-.cards {
-    background-color: var(--light-color);
-    padding: 10px;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    transition: var(--transition);
-    width: 100%;
-    display: flex;
-    justify-content: center; 
-}
+            button {
+                cursor: pointer;
+                color: var(--light-color);
+                background-color: var(--primary-color);
+                
+                &:hover {
+                    background-color: var(--secondary-color);
+                    color: var(--light-color);
+                }
+            }
+        }
+    }
 
-.cardtitle {
-    font-size: 24px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--secondary-color);
-    text-align: center;
-}
+    .dashcontent{
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        padding: 20px 0;
+        
+        .countcards {
+            width: 25%;
 
-.carditem {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
+            .cards {
+                padding: 20px;
+                margin-bottom: 5px;
+                border: 1px solid black;
+                background-color: var(--fade-primary-color);
 
-.cardname {
-    font-size: 22px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--secondary-color);
-}
+                .carditem {
+                    display: grid;
+                    grid-template-rows: 1fr 1fr;
+                    gap: 10px;
+                    padding: 10px;
+                    font-weight: 500;    
+                    align-items: end;
+                    color: var(--dark-color);
 
-.cardcount {
-    font-size: 22px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--primary-color);
-}
+                    .cardtitle {
+                        grid-column: 1 / 3;
+                        font-size: 20px;
+                    }
 
-.dashreport {
-    background-color: var(--light-color);
-    padding: 10px;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    transition: var(--transition);
-    width: 50%;
-    margin: 10px;
-    display: flex;
-    justify-content: center; 
-}
+                    .cardname {
+                        grid-column: 1 / 2;
+                        font-size: 18px;
+                    }
 
-.reportcard {
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-}
+                    .cardcount {
+                        grid-column: 2 / 3;
+                        font-size: 24px;
+                        display: flex;
+                        justify-content: end;
+                        align-self: end;
+                        font-weight: 600;
+                        color: var(--secondary-color);
+                    }
+                }
+            }
+        }
 
-.reporttitle {
-    font-size: 24px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--secondary-color);
-}
-  
-.reportcontent {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+        .dashreport {
+            width: 70%;
 
+            .reportcontent{
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+
+                .reportGraphButton{
+                    display: flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    width: 80%;
+                    padding: 20px 0;
+                    margin-bottom: 20px;
+                    border-bottom: 1px solid var(--fade-dark-color);
+
+                    span{
+                        font-size: 22px;
+                        font-weight: 600;
+                        border: 1px solid var(--fade-dark-color);
+                        padding: 10px 20px;
+                        border-radius: var(--border-radius);
+                        cursor: pointer;
+                        transition: var(--transition) ease-in-out;
+
+                        &:hover {
+                            background-color: var(--secondary-color);
+                            color: var(--light-color);
+                        }
+                    }
+                }
+                .reportGraph {
+                    padding: 20px;
+                    transition: var(--transition) ease-in-out;
+
+                    img{
+                        width: 100%;
+                        height: 300px;
+                    }
+                }
+            }
+        }
+    }
+}
