--- a/src/App.scss
+++ b/src/App.scss
@@ -22,18 +22,28 @@
   --fade-dark-color: #333;
   --light-color: #fff;
   --fade-light-color: #d6d6d6;
+  --fade-light-color2: #c8c8c8;
   --danger-color: #ff5e5e;
   --success-color: #5eff5e;
   --success-color-2: #009646;
   --warning-color: #ffdb5e;
   --info-color: #5e9eff;
   --border-radius: 5px;
+  --border-color: #abc3db;
+  --border-color2: #d6d6d6;
+  --border-color3: #7d9fec;
   --box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   --transition: 0.4s;
   --font-family: 'Poppins', sans-serif;
-  --font-size: 16px;
+  --fs-normal: 16px;
+  --fs-small: 14px;
+  --fs-large: 20px;
+  --fs-xlarge: 24px;
+  --fs-xxlarge: 28px;
+  --fs-heading: 32px;
   --font-weight: 400;
-  --line-height: 1.6;
+  --lh-normal: 1.5;
+  --lh-small: 1.3;
   --letter-spacing: 0.5px;
   --container-width: 1200px;
   --container-padding: 20px;
@@ -49,6 +59,29 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+}
+
+// global styles
+html {
+  font-size: 62.5%;
+}
+
+.d-flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.d-flex-column{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.d-a-flex {
+  display: flex;
+  align-items: center;
 }
 
 body {
