--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,16 +1,16 @@
 // common css for Dashboard component
 .c-dash-comp1 {
-    padding: 10px;
+    padding: 5px 10px;
     border: none;
     outline: none;
-    font-size: 16px;
+    font-size: var(--fs-normal);
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: var(--letter-spacing);
     transition: var(--transition) ease-in-out;
 }
 
 .dashboard-title {
-    font-size: 24px;
+    font-size: var(--fs-large);
     font-weight: 600;
     margin-bottom: 20px;
     color: var(--secondary-color);
@@ -25,31 +25,26 @@
 }
 
 .dashboard {
-    height: calc(100vh - 80px);
 
     .dashheader {
-        display: flex;
-        align-items: center;
         justify-content: space-between;
         padding: 20px;
         padding-left: 5px;
         border-bottom: 1px solid var(--fade-dark-color);
     
         .dashname {
-            font-size: 32px;
+            font-size: var(--fs-xxlarge);
             font-weight: 600;
             padding-left: 10px;
-            letter-spacing: 1px;
+            letter-spacing: var();
             text-transform: uppercase;
             text-decoration: none;
             color: var(--secondary-color);
         }
 
         .dashsearch {
-            display: flex;
-            align-items: center;
             padding: 1px 2px;
-            border: 2px solid var(--secondary-color);
+            border: 1px solid var(--border-color3);
             border-radius: var(--border-radius);
             background-color: var(--light-color);
             transition: var(--transition) ease-in-out;
@@ -87,7 +82,7 @@
             width: 25%;
 
             .cards {
-                padding: 20px;
+                padding: 10px;
                 margin-bottom: 5px;
                 border: 1px solid black;
                 background-color: var(--fade-primary-color);
@@ -103,7 +98,7 @@
 
                     .cardtitle {
                         grid-column: 1 / 3;
-                        font-size: 20px;
+                        font-size: var(--fs-large);
                     }
 
                     .cardname {
@@ -113,11 +108,10 @@
 
                     .cardcount {
                         grid-column: 2 / 3;
-                        font-size: 24px;
+                        font-size: var(--fs-xlarge);
                         display: flex;
                         justify-content: end;
                         align-self: end;
-                        font-weight: 600;
                         color: var(--secondary-color);
                     }
                 }
@@ -128,24 +122,20 @@
             width: 70%;
 
             .reportcontent{
-                display: flex;
-                align-items: center;
                 flex-direction: column;
 
                 .reportGraphButton{
-                    display: flex;
                     justify-content: space-evenly;
-                    align-items: center;
                     width: 80%;
                     padding: 20px 0;
+                    padding-top: 0px;
                     margin-bottom: 20px;
                     border-bottom: 1px solid var(--fade-dark-color);
 
                     span{
-                        font-size: 22px;
-                        font-weight: 600;
+                        font-size: var(--fs-large);
                         border: 1px solid var(--fade-dark-color);
-                        padding: 10px 20px;
+                        padding: 5px 20px;
                         border-radius: var(--border-radius);
                         cursor: pointer;
                         transition: var(--transition) ease-in-out;
