Login Form Done

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,6 @@
   --tiffany-blue-2: #90e6ceff;
   --aquamarine: #7adfbbff;
   --aquamarine-2: #86e2c1ff;
-}
-// global styles
-:root {
   --primary-color: #0066cc;
   --secondary-color: #004080;
   --teritary-color: #003366;
@@ -25,7 +22,8 @@
   --fade-light-color2: #c8c8c8;
   --danger-color: #ff5e5e;
   --success-color: #5eff5e;
-  --success-color-2: #009646;
+  --success-color2: #009646;
+  --success-color3: #19990b;
   --warning-color: #ffdb5e;
   --info-color: #5e9eff;
   --border-radius: 5px;
