--- a/src/components/Issues/Issues.scss
+++ b/src/components/Issues/Issues.scss
@@ -9,3 +9,154 @@
         width: 100%;
     }
 }
+
+.response-message {
+    margin-top: 2rem;
+    padding: 1rem;
+    border-radius: 5px;
+    font-size: var(--fs-xxlarge);
+    color: var(--color-white);
+    background-color: var(--color-success);
+    text-align: center;
+
+    span {
+        font-size: var(--fs-large);
+    }
+}
+
+.issueHeader {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 1rem;
+
+    .issueMenu {
+        margin-left: 10px;
+        margin-bottom: 20px;
+
+        .issue-btn {
+            margin-left: 20px;
+        }
+        a {
+            color: var(--primary-color);
+            padding: 5px 10px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: var(--fs-normal);
+            border: 1px solid var(--teritary-color);
+            transition: all 0.4s ease-in-out;
+
+            &:hover {
+                background-color: var(--teritary-color);
+                color: var(--fade-light-color);
+            }
+
+            &.active {
+                cursor: cursor;
+                background-color: var(--teritary-color);
+                color: var(--fade-light-color);
+            }
+        }
+    }
+}
+
+.issueForm{
+    width: 100%;display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3rem;
+
+    .createIssue {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 1rem;
+        padding: 20px;
+        width: 50%;
+        border-radius: 5px;
+        transition: all 0.4s ease-in-out;
+        // glassmorphism effect
+        
+        border: 1px solid var(--border-color);
+        background: rgba( 255, 255, 255, 0.25 );
+        backdrop-filter: blur( 4px );
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+        -webkit-backdrop-filter: blur( 4px );
+        border-radius: 10px;
+
+        .createIssueContent{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 1rem;
+            width: 100%;
+            
+
+            .createIssueForm {
+
+                .createIssueField {
+                    margin-bottom: 20px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    label {
+                        margin-bottom: 5px;
+                        font-size: var(--fs-normal);
+                    }
+
+                    input, select, textarea {
+                        min-width: 70%;
+                        max-width: 70%;
+                        padding: 5px 10px;
+                        border-radius: 5px;
+                        font-size: var(--fs-normal);
+                        border: 1px solid var(--teritary-color);
+                        transition: all 0.4s ease-in-out;
+
+                        &:focus {
+                            border: 1px solid var(--primary-color);
+                        }
+                        
+                        &[readonly] {
+                            background-color: var(--fade-light-color);
+                            cursor: not-allowed;
+                        }
+                    }
+
+                    textarea {
+                        height: 120px;
+                        resize: none;
+                    }
+                }
+            }
+
+            .createIssueInput {
+                padding: 5px 10px;
+                border-radius: 5px;
+                font-size: var(--fs-normal);
+                border: 1px solid var(--teritary-color);
+                transition: all 0.4s ease-in-out;
+
+                &:focus {
+                    border: 1px solid var(--primary-color);
+                }
+            }
+        }
+
+        .createIssueSubmit {
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: var(--fs-normal);
+            background-color: var(--primary-color);
+            color: var(--fade-light-color);
+            border: none;
+            cursor: pointer;
+            transition: all 0.4s ease-in-out;
+
+            &:hover {
+                background-color: var(--teritary-color);
+            }
+        }
+    }
+}
