--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -68,7 +68,7 @@ nav{
             font-weight: 500;
             letter-spacing: 1px;
             
-            a {
+            a, button {
                 font-size: var(--fs-normal);
                 padding: 5px 10px;
                 margin: 0 10px;
