--- a/src/components/Issues/Issues.scss
+++ b/src/components/Issues/Issues.scss
@@ -5,8 +5,12 @@
 .dataTables_wrapper {
     font-size: var(--fs-small);
 
-    .table_id{
+    .issuesTable{
         width: 100%;
+
+        #issuesTable{
+            font-family: Verdana, Geneva, Tahoma, sans-serif
+        }
     }
 }
 
@@ -38,25 +42,7 @@
             margin-left: 20px;
         }
         button {
-            color: var(--primary-color);
-            padding: 5px 10px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: var(--fs-small);
-            border: 1px solid var(--teritary-color);
-            transition: all 0.4s ease-in-out;
-            background: transparent;
-
-            &:hover {
-                background-color: var(--teritary-color);
-                color: var(--fade-light-color);
-            }
-
-            &.active {
-                cursor: cursor;
-                background-color: var(--teritary-color);
-                color: var(--fade-light-color);
-            }
+            margin-left: 20px;
         }
     }
 }
@@ -147,18 +133,140 @@
         }
 
         .createIssueSubmit {
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: var(--fs-small);
             background-color: var(--primary-color);
             color: var(--fade-light-color);
-            border: none;
-            cursor: pointer;
-            transition: all 0.4s ease-in-out;
 
             &:hover {
                 background-color: var(--teritary-color);
             }
         }
     }
+}
+
+// single issue view
+.singleIssueView{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    
+    .issueHeader{
+        margin-top: 20px;
+        justify-content: center;   
+    }
+}
+
+.singleIssueViews{
+    max-width: 400px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--primary-color);
+    // background: rgba( 255, 255, 255, 0.25 );
+    // backdrop-filter: blur( 4px );
+    // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    // -webkit-backdrop-filter: blur( 4px );
+    // border-radius: 10px;
+
+
+    .issueDetails{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .issueDetailsItem{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            padding: 0 30px;
+            margin-bottom: 1rem;
+            border-bottom: 1px solid var(--secondary-color);
+            padding-bottom: 10px;
+
+            .issueDetailsLabel{
+                font-size: var(--fs-normal);
+                font-weight: 520;
+            }
+
+            .issueDetailsValue{
+                font-size: var(--fs-normal);
+            }
+
+            .issueActions{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+
+                .save{
+                    color: var(--fade-light-color);
+                    background-color: var(--success-color2);
+                }
+
+                .delete{
+                    color: var(--fade-light-color);
+                    background-color: var(--danger-color);
+                }
+
+                .reset{
+                    color: var(--fade-light-color);
+                    background-color: var(--secondary-color);
+                }
+
+                .save:hover, .delete:hover, .reset:hover{
+                    background-color: var(--primary-color);
+                }
+            }
+        }
+    }
+
+    .issueDetailsForm{
+        width: 100%;
+
+        select {
+            width: 150px;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: var(--fs-small);
+            border: 1px solid var(--secondary-color);
+            color: var(--secondary-color);
+            transition: all 0.4s ease-in-out;
+
+            &:focus {
+                border: 1px solid var(--primary-color);
+            }
+        }
+
+        span {
+            font-size: var(--fs-large);
+            margin-left: 10px;
+            cursor: pointer;
+        
+            &:hover {
+                color: var(--primary-color);
+            }
+
+            &.active {
+                color: var(--primary-color);
+            }
+        }
+
+        textarea{
+            padding: 10px;
+            width: 100%;
+            height: 120px;
+            resize: none;
+            color: var(--dark-color);
+        }
+
+        .issueDetailsValue{
+            font-size: var(--fs-normal);
+            color: var(--dark-color); 
+        }
+    }
+
+}
+.issueTrackerMessage{
+    font-size: var(--fs-normal);
+    color: var(--teritary-color);
 }
