--- a/src/App.scss
+++ b/src/App.scss
@@ -89,6 +89,7 @@ body {
   letter-spacing: var(--letter-spacing);
   color: var(--dark-color);
   background-color: var(--fade-light-color);
+  // background-color: var(--light-color);
 }
 
 .container {
@@ -159,4 +160,70 @@ body {
 svg {
   margin-right: 10px;
   width: 20px;
+}
+
+// common form group styles
+.formBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding: 20px;
+  width: 50%;
+  border-radius: 5px;
+  transition: all 0.4s ease-in-out;
+  // glassmorphism effect
+  
+  border: 1px solid var(--border-color);
+  background: rgba( 255, 255, 255, 0.25 );
+  backdrop-filter: blur( 4px );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 10px;
+
+  .formHeader{
+    margin-bottom: 1rem;
+  }
+
+  .form-group {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    label {
+        margin-bottom: 5px;
+        font-size: var(--fs-small);
+    }
+
+    input, select, textarea {
+        min-width: 70%;
+        max-width: 70%;
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-size: var(--fs-small);
+        border: 1px solid var(--teritary-color);
+        transition: all 0.4s ease-in-out;
+
+        &:focus {
+            border: 1px solid var(--primary-color);
+        }
+        
+        &[readonly] {
+            background-color: var(--fade-light-color);
+            cursor: not-allowed;
+        }
+    }
+
+    textarea {
+        height: 120px;
+        resize: none;
+    }
+  }
+}
+
+// toasts
+.Toastify__toast-body > div:nth-child(2) {
+  font-size: var(--fs-small);
 }
