--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -18,6 +18,19 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 3rem;
+
+    .formContent{
+        width: 80%;
+
+        form{
+            display: flex;
+            justify-content: center;
+
+            .formFields{
+                width: 100%;
+            }
+        }
+    }
 }
 
 .singleProjectView{
@@ -26,4 +39,11 @@
     flex-direction: column;
     align-items: self-start;
     font-size: var(--fs-normal);
+}
+
+.singleProjectDetails{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    width: 70%;
 }
