--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,6 +2,11 @@ nav{
     background-color: var(--primary-color);
     box-shadow: var(--box-shadow);
     font-family: var(--font-family);
+    font-size: var(--font-size);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    border-bottom: 1px solid var(--teritary-color);
 }
 .navbar {
     display: flex;
