--- a/src/App.scss
+++ b/src/App.scss
@@ -52,6 +52,24 @@
   --container-max-width: 1200px;
 }
 
+// dark mode
+.dark-theme {
+  --primary-color: #212121;
+  --secondary-color: #424242;
+  --teritary-color: #616161;
+  --fade-primary-color: #a8cbff;
+  --dark-color: #101010;
+  --fade-dark-color: #f2f2f2;
+  --light-color: #ffffff;
+  --light-color2: #212121;
+  --fade-light-color: #d6d6d6;
+  --cambridge-blue: #79b9acff;
+}
+
+body .dark-theme {
+  color: var(--light-color2);
+}
+
 // universal styles
 *{
   margin: 0;
