--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -75,3 +75,43 @@
     }
 }
 
+.themeToggleBtn{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+.themeToggleBtnItem{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    cursor: pointer;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: var(--transition) ease-in-out;
+    outline: none;
+    background: transparent;
+    margin: 0 10px;
+    color: var(--light-color);
+    border: 2px solid var(--light-color);
+    border-radius: 50%;
+
+    svg{
+        cursor: pointer;
+        width: 40px;
+        margin-right: 0;
+        transition: var(--transition) ease-in-out;
+
+        &:hover {
+            color: var(--tiffany-blue-2);
+        }
+    }
+
+    &.active{
+        color: var(--tiffany-blue-2);
+        border: 2px solid var(--tiffany-blue-2);
+    }
+}
