--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,23 +1,29 @@
 .sidebar{
     transition: all 0.4s ease-in-out;
-    position: fixed;
-    top: 80px;
-    left: 0;
+    // position: fixed;
+    // top: 80px;
+    // left: 0;
     z-index: 100;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    width: 15%;
-
+    // width: 15%;
     font-size: var(--fs-normal);
     font-weight: 500;
     letter-spacing: 1px;
     color: var(--light-color);
+    margin-top: 80px;
+    overflow-y: scroll;
 
     .user-info{ 
         display: flex;
+        margin-bottom: 20px;
+        border-bottom: 2px solid var(--light-color);
+        width: 80%;
+        justify-content: center;
+        padding-bottom: 10px;
     
     svg{
         font-size: var(--fs-large);
@@ -34,7 +40,7 @@
         font-weight: 500;
         letter-spacing: 1px;
         color: var(--light-color);
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
         text-transform: capitalize;
     }}
 
@@ -101,7 +107,7 @@
 
     svg{
         cursor: pointer;
-        width: 40px;
+        width: 30px;
         margin-right: 0;
         transition: var(--transition) ease-in-out;
 
