--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@ nav{
     top: 0;
     z-index: 100;
     border-bottom: 1px solid var(--teritary-color);
+    box-shadow: 1px 4px 5px 0 rgba( 31, 38, 135, 0.37 );
 }
 .navbar {
     display: flex;
