--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -45,5 +45,217 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    width: 70%;
+    width: 100%;
+
+    .singleProjectAnalytics{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+        width: 50%;
+
+        .chart{
+            width: 100%;
+            height: 300px;
+            padding: 10px;
+            background-color: aliceblue;
+        }
+    }
+}
+
+.assignUserToProject{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1rem;
+    
+    .dashboard-title .span-project-title{
+        color: var(--fade-dark-color);
+    }
+
+    .assignUserToProjectForm{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        width: 100%;
+        background-color: var(--light-color);
+
+        .form-group{
+            display: flex;
+            align-items: center;
+            width: 80%;
+            padding: 10px;
+
+            label{
+                width: 20%;
+            }
+
+            .search-wrapper {
+                width: 100%;
+                padding: 10px;
+                border: 1px solid var(--teritary-color);
+                outline: none;
+            }
+        }
+
+        .form-group > div:nth-child(2) {
+            width: 100%;
+            }
+
+        .btn{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 15%;
+            color: var(--primary-color);
+            padding: 5px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: var(--fs-normal);
+            border: 1px solid var(--teritary-color);
+            transition: all 0.4s ease-in-out;
+            background: transparent;
+            margin-right: 15px;
+
+            &:hover {
+                background-color: var(--teritary-color);
+                color: var(--fade-light-color);
+            }
+        }
+    }
+}
+
+.dark-theme .assignUserToProject .assignUserToProjectForm {
+    background-color: var(--light-color2);
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(31, 38, 135, 0.5);
+
+    .form-group {
+
+        label {
+            color: var(--light-color);
+        }
+        
+        .search-wrapper {
+            background-color: var(--light-color);
+            color: var(--dark-color);
+
+        }
+        
+    }
+    .multiSelectContainer li{
+        color: var(--dark-color);
+    }
+    .btn {
+        border:  1px solid var(--primary-color2);
+        background-color: transparent;
+        color: var(--light-color);
+        
+        &:hover {
+            color: var(--primary-color2);
+        }
+    }
+  
+}
+
+.viewProjectUsers{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+
+    .dashboard-title {
+        width: 100%;
+    }
+}
+
+.projectUser {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+
+
+    .projectUserDetails {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        min-width: 200px;
+        background-color: var(--neon-color);
+        border-radius: 5px;
+        animation: neon-animation 1s infinite alternate;
+        cursor: pointer;
+
+        p {
+            color: var(--fade-light-color);
+            font-size: var(--fs-normal);
+            width: max-content;
+        }
+        &:hover {
+            position: relative;
+            overflow: hidden;
+            animation: none;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 0;
+                height: 0;
+                background-color: var(--neon-color2);
+                border-radius: 50%;
+                opacity: 0.5;
+                transition: width 0.3s ease-out, height 0.3s ease-out;
+            }
+        }
+
+        &:hover::before {
+            width: 200%;
+            height: 200%;
+        }
+    }
+
+
+    @keyframes neon-animation {
+        0% {
+            box-shadow: 0 0 5px var(--neon-color), 0 0 10px var(--neon-color);
+        }
+        100% {
+            box-shadow: 0 0 10px var(--neon-color), 0 0 0px var(--neon-color);
+        }
+    }
+}
+
+.issueDetailsForProjects table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1rem;
+    border: 1px solid var(--teritary-color);
+
+    th {
+        background-color: var(--primary-color);
+        color: var(--fade-light-color);
+        padding: 10px;
+        text-align: center;
+    }
+
+    td {
+        padding: 10px;
+        border-bottom: 1px solid var(--teritary-color);
+        text-align: center;
+    }
+
+    tr:nth-child(even) {
+        background-color: var(--light-color);
+    }
+
+    tr:hover {
+        background-color: var(--fade-light-color2);
+    }
+
 }
