--- a/src/App.scss
+++ b/src/App.scss
@@ -13,14 +13,17 @@
   --aquamarine-2: #86e2c1ff;
   // --primary-color: #0066cc;
   --primary-color: #0057ac;
+  --primary-color2: #0057ac;
   --secondary-color: #004080;
   --teritary-color: #003366;
   --fade-primary-color: #a8cbff;
   --dark-color: #000;
+  --dark-color2: #000;
   --fade-dark-color: #333;
   --light-color: #fff;
   --fade-light-color: #d6d6d6;
   --fade-light-color2: #c8c8c8;
+  --fade-light-color3: #a7b7d8;
   --danger-color: #ff5e5e;
   --success-color: #5eff5e;
   --success-color2: #009646;
@@ -36,6 +39,7 @@
   --font-family: 'Poppins', sans-serif;
   --fs-normal: 16px;
   --fs-small: 14px;
+  --fs-xsmall: 12px;
   --fs-large: 20px;
   --fs-xlarge: 24px;
   --fs-xxlarge: 28px;
@@ -64,10 +68,11 @@
   --teritary-color: #616161;
   --fade-primary-color: #a8cbff;
   --dark-color: #101010;
-  --dark-color2: #070707;
+  --dark-color2: #f2f2f2;
   --fade-dark-color: #f2f2f2;
   --light-color: #d4d4d4;
   --light-color2: #212121;
+  --light-color3: #070707;
   --fade-light-color: #d6d6d6;
   --cambridge-blue: #79b9acff;
   --info-color: #5e9eff;
@@ -77,6 +82,7 @@
   --neon-color: #0684ffaa;
   --neon-color2: #0684ffaa;
   --fade-light-color2: #383838;
+  --fade-light-color3: #172031;
 }
 
 .dark-theme body {
@@ -103,6 +109,23 @@ html {
   justify-content: center;
 }
 
+.success{
+  color: var(--success-color2);
+}
+
+.inprogress{
+  color: var(--warning-color);
+}
+
+.open{
+  color: var(--primary-color);
+}
+
+.cancel{
+  color: var(--danger-color);
+}
+
+
 .d-flex-column{
   display: flex;
   align-items: center;
@@ -113,6 +136,10 @@ html {
 .d-a-flex {
   display: flex;
   align-items: center;
+}
+
+.mb0 {
+  margin-bottom: 0;
 }
 
 body {
@@ -181,6 +208,7 @@ body {
   border: 1px solid var(--teritary-color);
   transition: all 0.4s ease-in-out;
   background: transparent;
+  cursor: pointer;
 
   &:hover {
       background-color: var(--teritary-color);
@@ -344,12 +372,143 @@ svg {
   }
 }
 
-.dark-theme .singleIssueEdit .issueDetailsForm span:hover,
-.dark-theme .singleIssueEdit .issueDetailsForm span.active{
+.dark-theme .singleCommonEdit .issueDetailsForm span:hover,
+.dark-theme .singleCommonEdit .issueDetailsForm span.active{
   color: var(--primary-color2);
 }
 
-.dark-theme .singleIssueEdit,
-.dark-theme .singleIssueViews{
-  background: var(--dark-color2);
+.dark-theme .singleCommonEdit,
+.dark-theme .singleCommonViews{
+  background: var(--light-color3);
+}
+
+.singleCommonViews, .singleCommonEdit{
+    max-width: 380px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--primary-color);
+    
+    .issueDetailsValue{
+        font-size: var(--fs-normal);
+    }
+
+    .commonEditHeader{
+        margin: 20px;
+        justify-content: center;   
+    }
+
+    .commonEditDetails{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .commonEditDetailsItem, .commonEditDetailsItemDesc{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          padding: 0 30px;
+          margin-bottom: 1rem;
+          border-bottom: 1px solid var(--secondary-color);
+          padding-bottom: 10px;
+
+          .commonEditDetailsLabel{
+              font-size: var(--fs-small);
+              font-weight: 520;
+          }
+
+          .commonEditDetailsValue{
+              font-size: var(--fs-small);
+          }
+
+          .commonEditActions{
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              width: 100%;
+
+              .save{
+                  color: var(--fade-light-color);
+                  background-color: var(--success-color2);
+              }
+
+              .delete{
+                  color: var(--fade-light-color);
+                  background-color: var(--danger-color);
+              }
+
+              .save:hover, .delete:hover{
+                  background-color: var(--primary-color);
+              }
+          }
+      }
+    }
+
+    .commonEditDetailsForm{
+      width: 100%;
+
+      select {
+          width: 180px;
+          padding: 5px 10px;
+          border-radius: 5px;
+          font-size: var(--fs-small);
+          border: 1px solid var(--secondary-color);
+          color: var(--secondary-color);
+          transition: all 0.4s ease-in-out;
+
+          &:focus {
+              border: 1px solid var(--primary-color);
+          }
+      }
+
+      span {
+          font-size: var(--fs-large);
+          margin-left: 10px;
+          cursor: pointer;
+      
+          &:hover {
+              color: var(--info-color);
+          }
+
+          &.active {
+              color: var(--info-color);
+          }
+      }
+
+      textarea{
+          padding: 10px;
+          width: 100%;
+          height: 120px;
+          resize: none;
+          color: var(--dark-color);
+      }
+
+      .commonEditDetailsValue{
+          font-size: var(--fs-normal);
+          color: var(--dark-color); 
+      }
+    }
+}
+
+.singleCommonEdit{
+  max-width: inherit;
+    width: 100%;
+
+    .commonEditDetails{
+        flex-direction: row;
+    }
+
+    .commonEditDetailsItem{
+        height: 40px;
+    }
+
+    .commonEditActualContent, .commonEditEditContent{
+        width: 50%;
+        height: 350px;
+    }
+    .commonEditDetailsItemDesc{
+        margin-bottom: 10px;
+        height: 140px;
+    }
 }
